# Vacuum_Cleaner_nav

./: .gitignore  frames_2025-04-19_21.57.48.gv  frames_2025-04-27_16.47.45.gv  frames_2025-04-29_22.15.32.gv  frames_2025-05-27_00.07.53.gv  frames_2025-06-01_23.50.01.gv  frames_2025-06-02_22.40.28.gv  map_data.txt  readme.md
install/: local_setup.sh  setup.sh
install/ldlidar_sl_ros2/lib/ldlidar_sl_ros2/: ldlidar_sl_ros2_node
install/ldlidar_sl_ros2/share/ament_index/resource_index/parent_prefix_path/: ldlidar_sl_ros2
install/ldlidar_sl_ros2/share/ldlidar_sl_ros2/: local_setup.sh  package.sh
install/vacuum_odom/lib/vacuum_odom/: imu_publisher_node  odom_publisher_node
install/vacuum_odom/share/vacuum_odom/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vacuum_slam/share/vacuum_slam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vacuum_slam/share/vacuum_slam/config/: ekf.yaml  mapper_params_online_async.yaml
install/vacuum_slam/share/vacuum_slam/launch/: online_async_launch.py
launch/: mapping_launch.py
log/: latest_build
src/ldlidar_sl_ros2/launch/: ld14.launch.py
src/vacuum_bluetooth/: package.xml  setup.cfg  setup.py
src/vacuum_bluetooth/vacuum_bluetooth/: bluetooth_node.py
src/vacuum_control/: package.xml  setup.py
src/vacuum_control/launch/: keyboard_control_launch.py
src/vacuum_control/vacuum_control/: keyboard_controller_node.py
src/vacuum_describe/: package.xml  setup.cfg  setup.py
src/vacuum_describe/launch/: robot_description_launch.py
src/vacuum_describe/urdf/: vacuum.urdf
src/vacuum_fusion/: package.xml  setup.cfg  setup.py
src/vacuum_fusion/config/: ekf.yaml
src/vacuum_fusion/launch/: ekf_launch.py
src/vacuum_interface/: package.xml  setup.cfg  setup.py
src/vacuum_interface/launch/: stm32_interface_launch.py
src/vacuum_interface/vacuum_interface/: stm32_interface_node.py
src/vacuum_nav/: COMPLETE_SYSTEM_README.md  NAVIGATION_README.md  README.md  VELOCITY_CONVERTER_README.md  package.xml  setup.cfg  setup.py
src/vacuum_nav/behavior_trees/: nav.xml  navigate.xml
src/vacuum_nav/config/: nav2_params.yaml  nav2_rviz.rviz
src/vacuum_nav/launch/: goal_receiver_launch.py  nav_launch.py  navigation_launch.py  rviz_launch.py  vacuum_slam_nav_launch.py  velocity_converter_launch.py
src/vacuum_nav/rviz/: nav2_default_view.rviz
src/vacuum_nav/vacuum_nav/: goal_receiver_node.py  navigation_node.py  velocity_converter_node.py
src/vacuum_odom/: setup.cfg  setup.py
src/vacuum_odom/launch/: imu_publisher.launch.py  odom_publisher.launch.py
src/vacuum_odom/vacuum_odom/: imu_publisher_node.py  odom_publisher_node.py
src/vacuum_slam/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/vacuum_slam/config/: ekf.yaml  mapper_params_online_async.yaml  slam_toolbox_params.yaml
src/vacuum_slam/launch/: online_async_launch.py  robot_state_publisher.launch.py  slam_toolbox_launch.py
src/vacuum_slam/urdf/: vacuum.urdf
src/vacuum_slam/vacuum_slam/: map_exporter_node.py
src/vacuum_wifi/: README.md  package.xml  setup.cfg  setup.py
src/vacuum_wifi/launch/: wifi_launch.py
src/vacuum_wifi/vacuum_wifi/: wifi_node.py
