<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vacuum_bluetooth</name>
  <version>0.0.0</version>
  <description>ROS 2 package for Bluetooth communication for the vacuum cleaner</description>
  <maintainer email="user@example.com">Reeve</maintainer>
  <license>Apache License 2.0</license> <!-- Or your preferred license -->

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
