<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vacuum_describe</name>
  <version>0.0.0</version>
  <description>Package containing the URDF description and TF setup for the vacuum cleaner robot.</description>
  <maintainer email="2544141826@qq.com">reeve</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend> <!-- Optional but good practice -->
  <exec_depend>xacro</exec_depend> <!-- Needed by the launch file -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
